first related stab

--- a/docs/draft/related.tex
+++ b/docs/draft/related.tex
@@ -8,10 +8,10 @@ We intended to create a more general application that can provide useful informa
 PowerTutor ultimately allows developers to determine the impact of their own application to improve their software designs.  
 Future work could seek to incorporate aspects of PowerTutor into Watt's Happening to fine-tune application usage details and improve recommendations.
 
-Chang, Agrawal, and Cameron survey the power management techniques employed by Android and how popular applications abuse or take advantage of those techniques\cite{energy-aware}. 
-They explore the idea that should optimize their software written for mobile devices for efficient power consumption, but in many cases the application developer does not necessarily take power into consideration. 
-They do several case studies of popular applications and analyze how they interact with the CPU, the screen, and other aspects of the mobile devices. 
-They came to the conclusion that even though Android does a great job to aggressively save power, application developers need to create their software with power consumption in mind. 
+Chang, Agrawal, and Cameron survey the power management techniques employed by Android and how popular applications abuse or take advantage of those techniques\cite{energy-aware}.
+They explore the idea that developers should optimize their software written for mobile devices for efficient power consumption, but in many cases the application developer does not necessarily take power into consideration. 
+They perform several case studies of popular applications and analyze how they interact with the CPU, the screen, and other aspects of mobile devices. 
+They came to the conclusion that even though Android does a great job aggressively saving power, application developers need to create their software with power consumption in mind. 
 The paper provides a beneficial overview of the Android power management system as well as several tools that a developer can use to monitor the power usage of a device's underlying hardware. 
 
 Pathak, Hu, and Zhang help application developers create power conserving software through their energy profiling tool called \emph{eprof}\cite{Pathak:2012:ESI:2168836.2168841}. 
