--- a/docs/draft/related.tex
+++ b/docs/draft/related.tex
@@ -18,57 +18,49 @@ Pathak, Hu, and Zhang help application developers create power conserving softwa
 The tool allows developers to monitor power consumption with multiple granularities and determine which pieces of code consume the most energy. 
 This is useful for catching programming bugs, such as holding onto a wakelock too long, as well as directing attention to code that requires optimization. 
 It also illuminates the fact that many applications use large amounts of energy in I/O operations. 
-This implies that in order to save energy, an application should only use 3G, GPS, and WiFi when it no other option exists.
-These observations led us to the conclusion that it \emph{Watt's Happening} needs to record and correlate network usage to specific applications.
+This implies that in order to save energy, an application should only use 3G, GPS, and WiFi when no other option exists.
+These observations led us to the conclusion that \emph{Watt's Happening} needs to record and correlate network usage to specific applications.
 Also, since network operations were shown to be energy intensive, a recommendation system should place an emphasis on applications that abuse the device's networking.
 %Therefore, it is clear that disabling these aspects of a mobile device can make profound differences in battery life.
 
 There has also been significant work that offers insights into user profiling and modeling.
 Eventually, \emph{Watt's Happening} aspires to leverage user profiling to automatically control the power of different radios on the device. 
 This would allow the application to prolong the battery life of a mobile device just by observing a user's usage patterns.
-Intelligent models are necessary in order to keep the application from intruding in user actions.
-If the application's actions cause annoyance to the user, then they will refuse to use the application. 
+Intelligent models are necessary in order to keep the application from intruding on user actions.
+If the application's actions cause annoyance to the user, they will then refuse to use the application. 
 
 Balajinath and Raghavan discuss learning user behavior to build a model of non-malicious user actions, with the intent to easily identify malicious users\cite{Balajinath:2001:IDT:2294491.2294970}. 
 They record the user's activity, and develop a newness factor to help identify behavior out of the norm. 
 They identify a 500-command history as the amount of history required to ensure maximum prediction accuracy. 
 
-Fawcett et al. use usage profiling to detect cellular cloning fraud \cite{dataMiningFraudDetection}. 
+Fawcett et al.\ use usage profiling to detect cellular cloning fraud \cite{dataMiningFraudDetection}. 
 While the idea of profiling users based on when and where they use services is similar to what we are trying to do, they use this information for a much different application. 
 
-Murmuria et al. develop a system for modeling power consumption on smartphone devices by collecting data on the wakelock drivers for a device's subsystem \cite{mobilePowerUsageMeasurements}. 
+Murmuria et al.\ developed a system for modeling power consumption on smartphone devices by collecting data on the wakelock drivers for a device's subsystem \cite{mobilePowerUsageMeasurements}. 
 They break down the major subsystems (CPU, display, graphics, GPS, audio, and WiFi) and develop metrics by which power consumption can be determined for each subsystem. 
 The paper provides a good overview of a low impact way of determining power consumption of individual components in a smartphone.
-This correlation between subsystem and power consumption would allow for more powerful recommendations by \emph{Watt's Happening}.
+This correlation between subsystem and power consumption could allow for more powerful recommendations by \emph{Watt's Happening}.
 \emph{Watt's Happening} could then give predictions stating how long a specific application can run while still achieving the overall battery-life goal for the device.
 
 Goecks and Shavlik address unobtrusive observation of user behavior \cite{Goecks:2000:LUI:325737.325806}. 
 Users do not need to necessarily identify successful results, but one can infer measurements of success from properties of successful predictions. 
 These properties should be observable without user interaction to assess likelihood of success. 
 
-% I have no idea how to connect this to what we did
-%Ashbrook learns significant locations and predicts user movement from GPS data \cite{Ashbrook:2002:LSL:862896.881068}. 
-%Raw location data is analyzed using k-clustering with a variety of radiuses. 
-%A building location is inferred from lack of GPS information for an arbitrarily selected ten minute time slice. 
-%This is vulnerable to other GPS data issues, including urban canyons or device failure. 
-%The location prediction is based on a Markov model built off of observed patterns. 
-%First order Markov models are used, as data models beyond that would require a much longer observation period. 
-
-Rumble et al. discussed a new operating system called Cinder that sought to extend limited energy resources by implementing capacitor objects \cite{Rumble:2009:AJT:1592606.1592618}. 
+Rumble et al.\ discussed a new operating system called Cinder that sought to extend limited energy resources by implementing capacitor objects \cite{Rumble:2009:AJT:1592606.1592618}. 
 The similarities to their work included a desire to reach a goal usage time by dynamically running statistics of application energy consumption. 
 The differences between their OS and our goal is that they built a new OS where as we aim to create an application on top of Android. 
 In addition, Cinder actively limits the energy consumption of various applications where we create suggestions for the user to implement. 
 
-Zeng et al. established energy as a resource called currentcy and established pricing for using that resource \cite{Zeng:2003:CUA:1247340.1247344}. 
+Zeng et al.\ established energy as a resource called currentcy and established pricing for using that resource \cite{Zeng:2003:CUA:1247340.1247344}. 
 Both currentcy and\emph{ Watt's Happening} set usage time goals and dynamically adjusts to overspent and underspent energy to allow the application to meet that energy goal. 
 However, currentcy forces all devices on the platform to adopt the energy resource type. 
 This makes application programmers factor currentcy in to their design whereas \emph{Watt's Happening} aims to be invisible to other applications. 
 
-Shi et al. develop a method of identifying users based on behavior profiling \cite{learningUserBehavior}. 
+Shi et al.\ develop a method of identifying users based on behavior profiling \cite{learningUserBehavior}. 
 Their methods of learning users' typical habits could be applied to power usage as well. 
 If we know that a person uses their GPS when traveling to work every morning then we can account for that required power consumption when modeling usage goals. 
 
-Oliner et al. developed Carat, a system to identify misbehaving code and energy-inefficient applications \cite{Oliner:2012:CED:2387858.2387864}.
+Oliner et al.\ developed Carat, a system to identify misbehaving code and energy-inefficient applications \cite{Oliner:2012:CED:2387858.2387864}.
 The designers differentiated Carat from \emph{Watt's Happening} by using a community model.
 Carat's sparse information gathering is also different than \emph{Watt's Happening}'s continuous logging cycle.
 Due to this sparseness, Carat's estimations of application usage may not be available to the user for up to a week after initial installation.
